new post and use higher quality pictures

--- a/_posts/2015-03-01-spring.md
+++ b/_posts/2015-03-01-spring.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Spring can't be far away"
+title:  "uphill"
 date:   2015-03-01 12:57:15
 categories: cycling road
 position: 48.242754, 16.217110
-source_url: https://www.flickr.com/photos/jpersson/16715877655
-photo_url: https://farm9.staticflickr.com/8581/16715877655_624cc5b272_z.jpg
+source_url: https://www.flickr.com/photos/jpersson/16236929963/
+photo_url: https://farm8.staticflickr.com/7611/16236929963_c64120986f_h.jpg
 ---
